--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "papaparse": "^5.5.3",
     "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
-  
 }
