--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,9 @@
 PORT=5000
+ERP_BASE_URL=http://localhost:4004
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=webshop_db
 DB_PASSWORD=8008
 DB_PORT=5433
+ERP_USER=alice
+ERP_PASS=alice
